# PerpSignalHFT

./: Cargo.toml  README.md
src/: binance.rs  cli.rs  format.rs  lib.rs  main.rs
src/ipc/: mod.rs  shm_queue.rs  tcp.rs
